<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:src="@drawable/fbloginpageheader"
        tools:ignore="ContentDescription" />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/instalogo"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logintofb"
        android:layout_gravity="center"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernamebox"
            android:inputType="text"
            android:id="@+id/usernameboxfb_id"
            android:autofillHints="no" />
        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Passwordbox"
            android:id="@+id/passwordboxfb_id"
            android:inputType="textPassword"
            android:autofillHints="no" />
        <Button
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:backgroundTint="@color/fbblue"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/loginfb"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpfb"
        android:layout_gravity="center"
        android:textSize="15sp"/>


</LinearLayout>

